--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title></title>
+		<title>HERE IS A TITLE</title>
 		<meta name="description" content="web forms"/>
 		<meta name="author" content="Damian Jarzabek"/>
 		<meta name="keywords" content="web, forms"/>
